<resources>
    <string name="app_name">LetsFund</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="profile_saved">Profile Saved</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="contact_saved">Contact Saved</string>
    <string name="no_record">No record</string>
    <string name="error_profile">Please enter phone number</string>
    <string name="upload">Upload</string>
    <string name="delete">delete</string>
    <string name="contact_updated">Contact Updated</string>
    <string name="contact_deleted">Contact Deleted</string>
    <string name="delete_record">Delete Record?</string>
    <string name="edit">Edit</string>
    <string name="url_server">https://letsfund.000webhostapp.com/api/</string>
    <string name="url_read">user/read.php</string>
    <string name="url_create">user/create.php</string>
    <string name="download">download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="wallet">Wallet</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Lend">Lend</string>
    <string name="History">History</string>
    <string name="title_activity_lender">LenderActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_borrower">BorrowerActivity</string>
    <string name="ApplyLoan">Apply Loan</string>
    <string name="Repayment">Repayment</string>
    <string name="BorrowerHome">Borrower Home</string>
    <string name="LenderProfile">Profile</string>
    <string name="BorrowerProfile">Profile</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="borrower">Borrower</string>
    <string name="lender">Lender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="customer_service">Customer Service</string>
    <string name="logout">Logout</string>
    <string name="profile_photo">Profile Photo</string>


    <!-- Strings related to user authentication -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign Up</string>
    <string name="title_signUp">Create an Account</string>
    <string name="title_login">Welcome Back</string>
    <string name="nav_signUp">Dont have an account? Click here</string>
    <string name="nav_login">Have an existing account? Click here</string>
    <string name="required">Required</string>
    <string name="title_register">Register as</string>
    <string name="continues">Continue</string>
    <string name="dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reset">Reset</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="upload_error">Upload Failed</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="LetsFundWallet">LetsFundWallet</string>
    <string name="LetsFin">LetsFin</string>
    <string name="BackgroundImage">Background Image</string>
    <string name="WalletHistory">Recent transactions</string>
    <string name="visa_card_number">****   ****   ****   9982</string>
    <string name="visa_card_valid">Valid THRU</string>
    <string name="visa_card_date">08/19</string>
    <string name="visaCardDetails">VISA CARD DETAILS</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="card_sample">Card Sample</string>

    <string name="letsfund">LetsFund</string>
    <string name="an_overview_of_the_application_process">An overview of the application process</string>
    <string name="complete_the_form">Complete The Form</string>
    <string name="take_5_10_minutes_to_fill_up_the_details">Take 5–10 minutes to fill up the details.</string>
    <string name="await_funding">Await Funding</string>
    <string name="get_support_from_lenders_in_our_platform">Get support from lenders in our platform.</string>
    <string name="await_disbursement">Await Disbursement</string>
    <string name="funds_will_be_deposited_into_your_bank_account">Funds will be deposited into your bank account.</string>
    <string name="submit">Submit</string>
    <string name="ten">10</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="date">date</string>

    <!-- WITHDRAW  -->
    <string name="method">method</string>
    <string name="amount">amount</string>
    <string name="Withdraw">Withdraw</string>
    <string name="BankDetials">Bank Details</string>
    <string name="DuitNow">DuitNow</string>
    <string name="bank">Bank</string>
    <string name="bankaccount">Bank Account Number</string>
    <string name="bankaccno">Account Number</string>
    <string name="TransferTo">Transfer To</string>
    <string name="mobile">Mobile Number</string>
    <string name="proceed">Proceed</string>
    <array name="bank">
        <item>Select One</item>
        <item>Public Bank</item>
        <item>MayBank</item>
    </array>
    <array name="WithdrawOption">
        <item>Select One</item>
        <item>Phone Number</item>
        <item>Bank</item>
    </array>


     <!-- LEND  -->
    <string name="funding">Funding</string>
    <string name="almost_funded">Almost Funded</string>
    <string name="ending_soon">Ending Soon</string>
    <string name="buttonLend">Lend Now</string>
    <string-array name="fundAmount">
        <item>RM 25</item>
        <item>RM 50</item>
        <item>RM 100</item>
        <item>RM 125</item>
        <item>RM 150</item>
        <item>RM 175</item>
        <item>RM 200</item>
    </string-array>
    <string name="letspay">LetsPay</string>


    <string-array name="fundSort">
        <item>All</item>
        <item>Almost Funded</item>
        <item>Ending Soon</item>
    </string-array>


</resources>