<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="my.edu.tarc.letsfund.ui.lender.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="my.edu.tarc.letsfund.ui.lender.wallet.WalletFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="my.edu.tarc.letsfund.ui.lender.lenderprofile.LenderProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_lenderprofile" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="my.edu.tarc.letsfund.ui.lender.history.HistoryFragment"
        android:label="@string/History"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_lend"
        android:name="my.edu.tarc.letsfund.ui.lender.lend.LendFragment"
        android:label="@string/Lend"
        tools:layout="@layout/fragment_lend" />
</navigation>