<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_lenderhome">

    <fragment
        android:id="@+id/navigation_repayment"
        android:name="my.edu.tarc.letsfund.ui.lender.wallet.WalletFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_wallet" >
        <action
            android:id="@+id/action_navigation_repayment_to_navigation_cardpayment"
            app:destination="@id/navigation_cardpayment"
            app:popUpTo="@id/navigation_repayment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="my.edu.tarc.letsfund.ui.lender.history.HistoryFragment"
        android:label="@string/History"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_applyloan"
        android:name="my.edu.tarc.letsfund.ui.lender.lend.LendFragment"
        android:label="@string/Lend"
        tools:layout="@layout/fragment_lend" />
    <fragment
        android:id="@+id/navigation_lenderhome"
        android:name="my.edu.tarc.letsfund.ui.lender.lenderhome.LenderHomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_lenderhome" />
    <fragment
        android:id="@+id/navigation_lenderprofile"
        android:name="my.edu.tarc.letsfund.ui.lender.lenderprofile.LenderProfileFragment"
        android:label="@string/LenderProfile"
        tools:layout="@layout/fragment_lenderprofile" >
        <action
            android:id="@+id/action_navigation_lenderprofile_to_navigation_editprofile"
            app:destination="@id/navigation_editprofile"
            app:popUpTo="@id/navigation_lenderprofile"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_editprofile"
        android:name="my.edu.tarc.letsfund.ui.authentication.profile.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/navigation_cardpayment"
        android:name="my.edu.tarc.letsfund.ui.payment.CardPaymentFragment"
        android:label="@string/payment"
        tools:layout="@layout/fragment_card_payment" />

</navigation>