<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.authentication.profile.EditProfileFragment">

        <ProgressBar
            android:id="@+id/loadingProfile"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            app:cornerRadius="30dp"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconGravity="textTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEditProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewUploadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/upload_photo"
            android:textColor="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameContainer"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUploadPhoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:hint="@string/first_name"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameContainer"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUploadPhoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:hint="@string/last_name"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:fontFamily="@font/montserrat"
                android:hint="@string/dob"
                android:inputType="date"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dobContainer" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:paddingRight="20dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:hint="@string/phone"
                android:inputType="number"
                android:lines="1"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReset"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:width="340dp"
            android:backgroundTint="@color/dark_grey"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/reset"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneContainer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            android:width="340dp"
            android:backgroundTint="@color/dark_green"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/save"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneContainer" />


        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEditProfileTitle"
            app:srcCompat="@drawable/baseline_account_circle_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>